[package]
name = "glt-mc-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.20", features = ["glam-assert"] }
grid = { git = "https://github.com/ScottyThePilot/grid" }
noise = { git = "https://github.com/ScottyThePilot/noise-rs" }
rand = "0.8.4"
rand_xoshiro = "0.6.0"
rayon = "1.5.1"
once_cell = "1.9.0"

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]

[profile.dev]
opt-level = 3
